# python-comwatt-client

./: LICENSE  README.md  pyproject.toml  renovate.json  requirements-dev.txt  setup.py
.forgejo/workflows/: renovate.yml  tests.yml
.github/workflows/: publish.yml  tests.yml
comwatt/: client.py
comwatt_client/: __init__.py  _aggregations.py  _auth.py  _capacities.py  _connected_objects.py  _core.py  _devices.py  _grid.py  _sites.py  _streaming.py  client.py  exceptions.py
docs/energy.comwatt.com/: README.md  aggregations.md  auth.md  capacities.md  devices.md  measurekeys.md  misc-endpoints.md  sites-and-users.md  tiles-and-dashboard.md  websocket-realtime.md
src/: client.py
tests/: conftest.py  test_aggregations.py  test_authenticate.py  test_capacities.py  test_connected_objects.py  test_context_manager.py  test_device_kinds.py  test_devices.py  test_ecowatt.py  test_electricity_price.py  test_exceptions.py  test_measure_keys.py  test_reauth.py  test_streaming.py  test_tiles.py  test_user_and_sites.py  test_version.py
