[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comwatt-client"
dynamic = ["version"]
description = "Python Client for Comwatt API"
readme = "README.md"
license = "MIT-0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Matéo Greil", email = "contact@greil.fr" },
]
dependencies = [
    "requests>=2.32.4",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
stream = ["websocket-client>=1.6"]

[project.urls]
Homepage = "https://github.com/MateoGreil/python-comwatt-client"

[tool.setuptools.dynamic]
version = { attr = "comwatt_client.__version__" }

[tool.setuptools.packages.find]
include = ["comwatt_client*"]

[tool.setuptools.package-data]
comwatt_client = ["py.typed"]

[tool.mypy]
python_version = "3.10"
files = ["comwatt_client"]
ignore_missing_imports = true
disallow_untyped_defs = true
